--- a/gimong/app/globals.css
+++ b/gimong/app/globals.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 @import "tw-animate-css";
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap');
 
 @custom-variant dark (&:is(.dark *));
 
@@ -120,5 +121,7 @@
   }
   body {
     @apply bg-background text-foreground;
+    font-family: 'Roboto Condensed', sans-serif;
   }
 }
+
